--- a/offline-base-data/ReadMe
+++ b/offline-base-data/ReadMe
@@ -21,3 +21,31 @@
 对统计结果按卡点对数量倒序排序，取所有卡点对的前5%（暂定5%，后面可以优化算法）作为卡点关联关系基
 础数据，从而可以创建卡点有向图。例如，对上面统计结果取前两个卡点对(79,252)和(252,10043)，那么卡点
 关联关系就包括这两个卡点对。同时，可以根据旅行时间序列计算出自由流旅行时间（1-5点）。
+
+
+1.读取hdfs 文件数据
+   过滤掉无牌，00000000，保留当天数据--a
+
+2.以 车牌号-类型为key ,进行group ==>(k,values)---b
+3.遍历b :
+   对values 进行时间排序
+   判断 values 中 i,与i+1的时间差是否《=30分钟
+   《=30分钟：对轨迹进行延续
+    》30分钟：另外一条轨迹的开始
+   将结果放入array
+    最终格式  k,array(passtime,cid)
+4.保存数据--hdfs:格式k,passtiime-cid`passtime-cid...etc
+
+
+
+1.读取3个月的base数据
+2.处理数据时间以30分为粒度
+  形成格式车牌号，车辆类型，开始时间，结束时间，卡点对--c
+
+3.对c做reduceByKey(_+_)  其中key =c 形成 c,sum（相同记录求和）
+
+4,对sum进行排序
+5.取前5个，并保存到hdfs格式：c,sum
+
+
+导出到Es
